# HakoNyans

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  PHASE8C_DEBUG_REPORT.md  README.ja.md  README.md  claude.md  current_task.md  test.hkn  test_420.hkn  test_full.hkn  test_gray.hkn  test_p7b.hkn
Testing/Temporary/: CTestCostData.txt
bench/: bench_anime_lossy.cpp  bench_anime_quality.cpp  bench_bit_accounting.cpp  bench_bit_accounting_common.cpp  bench_bit_accounting_common.h  bench_bit_accounting_lossless_json_report.inc  bench_bit_accounting_lossless_report.cpp  bench_bit_accounting_lossless_report.h  bench_bit_accounting_lossless_text_report.inc  bench_bit_accounting_lossless_text_report_filter_lo_screen.inc  bench_bit_accounting_lossless_text_report_overview.inc  bench_bit_accounting_lossless_text_report_route_profile.inc  bench_compare.sh  bench_decode.cpp  bench_entropy.cpp  bench_lossless.cpp  bench_phase3.cpp  bench_png_compare.cpp  bench_png_compare_common.h  bench_png_compare_common_args.inc  bench_png_compare_common_csv.inc  bench_png_compare_common_types.inc  bench_png_compare_main_abdiff.inc  bench_png_compare_main_breakdown.inc  bench_png_compare_runner.cpp  bench_png_compare_runner.h  bench_png_compare_runner_row_finalize.inc  bench_png_compare_runner_sample_collect.inc  bench_png_compare_runner_samples_decl.inc  bench_screen_profile.cpp  png_wrapper.h  ppm_loader.h
docs/: BENCHMARKS.md  CHATGPT_PRO_CONSULT_PROMPT_BEYOND_PNG.md  DESIGN_DECISIONS.md  DEVELOPMENT_HISTORY.md  ENTROPY_NYANS_P.md  LOSSLESS_FLOW_MAP.md  PARALLEL_INDEX.md  PHASE5_DESIGN.md  PHASE7_STRATEGY.md  PHASE9K_TILE_MATCH4_INSTRUCTIONS.md  PHASE9L_LZ_DEBUG_INSTRUCTIONS.md  PHASE9L_LZ_STREAM_PRIORITY_INSTRUCTIONS.md  PHASE9M_COPY_STREAM_ENTROPY_INSTRUCTIONS.md  PHASE9N_FILTER_STREAM_WRAPPER_INSTRUCTIONS.md  PHASE9O_FILTER_LO_DELTA_INSTRUCTIONS.md  PHASE9P_FILTER_LO_ROW_PREDICTOR_INSTRUCTIONS.md  PHASE9Q_FILTER_LO_CONTEXT_SPLIT_INSTRUCTIONS.md  PHASE9S3_UI_ANIME_GATING_INSTRUCTIONS.md  PHASE9U_NATURAL_PNG_ANALYSIS.md  PHASE9W_CHATGPT_PRO_CONSULT_2026-02-13.md  PHASE9W_CHATGPT_PRO_CONSULT_MODE2_COUNTERS_2026-02-13.md  PHASE9W_MODE3_WEIGHTED_FIX_INSTRUCTIONS.md  PHASE9W_NATURAL_GLOBAL_LZ_INSTRUCTIONS.md  PHASE9W_ROUTEPARAM_SWEEP_INSTRUCTIONS.md  PHASE9W_SPEED_OPTIMIZATION_LOG.md  PHASE9W_SPEED_SIZE_BALANCE_POLICY.md  PHASE9X_CURRENT_GOALS.md  PHASE9_CFL_COLOR_BUG_DEBUG_INSTRUCTIONS.md  PHASE9_COMPRESSION_STRATEGY.md  PHASE9_LOSSLESS_PROFILE_PLAN.md  PRODUCT_POSITIONING.md  SIMD_GUIDE.md  SPEC.md
docs/archive/: 2026-02-13_filter_lo_decode_nogo.md  2026-02-13_mode2_len3_prereject_nogo.md  2026-02-13_mode2_pipeline_limit_gating_nogo.md  2026-02-13_plane_lo_stream_pruning_nogo.md  2026-02-13_plane_reconstruct_copy_tm4_fastpath.md  2026-02-14_blockclass_avx2_inner_nogo.md  2026-02-14_blockclass_avx512_optin_nogo.md  2026-02-14_bstream_allocopt_nogo.md  2026-02-14_filter_lo_lz_probe_counter_and_sweep.md  2026-02-14_filter_lo_scratch_reuse_nogo.md  2026-02-14_filter_rows_bits2_forcepaeth_ab.md  2026-02-14_filter_rows_entropy_stage1_ab.md  2026-02-14_filter_rows_lzcost_gate_sweep.md  2026-02-14_filter_rows_lzcost_photo_trial.md  2026-02-14_lostream_mode3_branchcut_nogo.md  2026-02-14_lostream_mode3_onepass_nogo.md  2026-02-14_mode2_nice64_nogo.md  2026-02-14_mode2_nice_sweep_128_224_nogo.md  2026-02-14_mode2_prefetch_localcounter_nogo.md  2026-02-14_mode5_sweep_kodim03_results.md  2026-02-14_mode6_v17_typebit_lensplit.md  2026-02-14_natural_mode3_weighted_nogo.md  2026-02-14_optparse_costmodel_nogo.md  2026-02-14_preset_lane_binding_and_lz_probe.md  2026-02-14_routecost_fastabs_nogo.md  2026-02-14_tilelz_chain_optin_ab.md  CLAUDE.md  README.md
docs/phase9w/: INDEX.md  README.md  SPEED_STATUS.md
hakonyans_boxes/: README.md
include/hakonyans/: api.h  version.h
paper/: README.md  manuscript.md  paper_ja.tex
paper/repro/: README.md  build_paper.sh  generate_qualitative_figures.py  generate_tex_tables.py  parse_lossless_png_compare.py  run_lossless_snapshot.sh  run_lossy_jpeg_hkn_compare.py  run_lossy_rd.py
paper/results/: lossless_bit_accounting_hd01.txt  lossless_bit_accounting_nature01.txt  lossless_bit_accounting_vscode.txt  lossless_decode_bench.txt  lossless_png_compare.txt  lossless_png_compare_detail.csv  lossless_png_compare_focus.csv  lossless_png_compare_latest.txt  lossless_png_compare_summary.csv  lossy_jpeg_hkn_detail.csv  lossy_jpeg_hkn_summary.csv  lossy_rd_q50_smoke.csv
paper/tables/: table_lossless_png_focus.tex  table_lossy_q75_summary.tex  table_lossy_q90_summary.tex
research/: phase5_design_question.md
src/codec/: band_groups.h  byte_stream_encoder.h  cfl_codec.h  colorspace.h  copy.h  copy_codec_decode_copy_stream.inc  copy_codec_encode_copy_stream.inc  (+73 more)
tests/: lossless_round2_tests_basic.inc  lossless_round2_tests_basic_core.inc  lossless_round2_tests_basic_filter_lo.inc  lossless_round2_tests_basic_filters_and_copy.inc  lossless_round2_tests_extra.inc  lossless_round2_tests_mode6.inc  lossless_round2_tests_mode6_lzcost_preset.inc  lossless_round2_tests_mode6_v15_v16.inc  lossless_round2_tests_mode6_v17.inc  lossless_round2_tests_routes.inc  lossless_round2_tests_routes_mode4_profile.inc  lossless_round2_tests_routes_profile_natural.inc  lossless_round2_tests_routes_screen_palette.inc  test_420_subsampling.cpp  test_adaptive_quant.cpp  test_avx2_rans.cpp  test_band_cdf.cpp  test_cfl.cpp  test_codec_color.cpp  test_codec_gray.cpp  test_debug_codec.cpp  test_interleaved.cpp  test_lossless_round1.cpp  test_lossless_round2.cpp  test_parallel.cpp  test_phase5_components.cpp  test_rans_roundtrip.cpp  test_rans_simple.cpp  test_screen_profile_step1.cpp  test_screen_profile_step2.cpp  test_screen_profile_step3.cpp  test_screen_profile_step4.cpp
tools/: analyze_sweep_results.py  calc_psnr.py  extract_natural_metrics.py  gen_test_images  gen_test_images.cpp  hakonyans_cli.cpp  plot_rd_curve.py  sweep_filter_lo_lz_probe.py  sweep_natural_route_params.py  sweep_natural_thresholds.py  sweep_natural_thresholds_expanded.py  sweep_optparse_gate.py  tune_band_groups.py
(+28 files in other folders)
